# infer_deploy_cv

./: README.md
deploy/: .gitignore  CMakeLists.txt  README.md  conanfile.txt  todo_list.md  version.h.in
deploy/benchmark/: README.md  benchmark.py  config.json
deploy/benchmark/agent/: __init__.py  agent_adb.py  agent_local.py  agent_serial.py  agent_ssh.py  agent_telnet.py
deploy/cmake/: ascend.cmake  bmnn.cmake  boost.cmake  cambricon.cmake  clipper.cmake  conan.cmake  cuda.cmake  ffmpeg.cmake  mnn.cmake  onnxruntime.cmake  opencv.cmake  openvino.cmake  rk.cmake  spdlog.cmake  ts.cmake
deploy/docker/: README.md  docker_message.md  install_build.sh  install_convert.sh
deploy/docker/dockerfile/: ascend_runtime_arm.Dockerfile  bmnn_build.Dockerfile  bmnn_modelconvert_mlir.Dockerfile  bmnn_modelconvert_mqbench.Dockerfile  cambricon_370.Dockerfile  gddeploy_runtime.Dockerfile  nvidia.Dockerfile  nvidia_x64.Dockerfile  openvino_build.Dockerfile  openvino_convert.Dockerfile  rk-toolkits2_convert.Dockerfile  rknpu2_runtime.Dockerfile  runtime.Dockerfile  ts.Dockerfile
deploy/docs/: README.md  共达地gddeploy推理SDK用户手册.docx  模型融合说明.md  版本说明.md
deploy/docs/api/: api.md
deploy/docs/ascend/: 资料.md
deploy/docs/bmnn/: bmnn.md
deploy/docs/cambricon/: 环境搭建.md
deploy/docs/onnx/: README.md
deploy/docs/project/: 新硬件平台注册.md  编写思路.md  编写记录.md  适配步骤.md
deploy/docs/rk/: 频率设置.md
deploy/docs/ts/: ts.md
deploy/include/api/: infer_api.h  processor_api.h  session_api.h
deploy/include/app/: runner_pic.h  runner_video.h
deploy/include/common/: config.h  data_queue.h  logger.h  type_convert.h
deploy/include/core/: alg.h  cv.h  device.h  infer_server.h  model.h  model_properties.h  pipeline.h  postprocess.h  predictor.h  preprocess.h  result_def.h
deploy/include/core/mem/: buf_surface.h  buf_surface_impl.h  buf_surface_util.h
deploy/release/: CMakeLists.txt  README.md
deploy/release/script/: build.sh  docker_build.sh  docker_runtime.sh  env.sh  env_cuda_x86.sh
deploy/sample/: CMakeLists.txt  sample_runner_dataset.cpp  sample_runner_pic.cpp  sample_runner_video.cpp  test_only_infer.cpp
deploy/src/: CMakeLists.txt
deploy/src/api/: CMakeLists.txt  infer_api.cpp  processor_api.cpp  session_api.cpp
deploy/src/app/: CMakeLists.txt  result_handle.cpp  runner_dataset.cpp  runner_pic.cpp  runner_video.cpp
deploy/src/app/pic/: nvjpeg.cpp
deploy/src/app/video/: video_decode_ffmpeg.cpp  video_decode_ffmpeg.h
deploy/src/common/: CMakeLists.txt  logger.cpp  type_convert.cpp
deploy/src/core/: CMakeLists.txt  README.md  buffer.cpp  cache.h  cv.cpp  data_type.cpp  data_type.h  device.cpp  engine.cpp  engine.h  exector.cpp  exector.h  infer_server.cpp  pipeline.cpp  priority.h  processor.h  profile.h  register.cpp  request_ctrl.cpp  request_ctrl.h  session.cpp  session.h
deploy/src/core/alg/: alg.cpp
deploy/src/core/mem/: buf_surface.cpp  buf_surface_impl.cpp  buf_surface_util.cpp
deploy/src/core/model/: model.cpp  model_manager.cpp  model_properties.cpp
deploy/src/core/processor/: postprocess.cpp  predictor.cpp  preprocess.cpp
deploy/src/core/util/: batcher.h  env.h  thread_pool.cpp  thread_pool.h  threadsafe_queue.h  timer.cpp  timer.h
deploy/src/register/: CMakeLists.txt  README.md
deploy/src/register/alg/action/: alg_action.cpp  alg_action.h
deploy/src/register/alg/classify/: alg_classify.cpp  alg_classify.h
deploy/src/register/alg/detect/: alg_detect.cpp  alg_detect.h
deploy/src/register/alg/face_retrieval/: alg_face_retrieval.cpp  alg_face_retrieval.h
deploy/src/register/alg/image_retrieval/: alg_image_retrieval.cpp  alg_image_retrieval.h
deploy/src/register/alg/ocr_detect/: alg_ocr_detect.cpp  alg_ocr_detect.h
deploy/src/register/alg/ocr_retrieval/: alg_ocr_retrieval.cpp  alg_ocr_retrieval.h
deploy/src/register/alg/pose/: alg_pose.cpp  alg_pose.h
deploy/src/register/alg/seg/: alg_seg.cpp  alg_seg.h
deploy/src/register/devices/ascend/: ascend_buf_surface_impl.cpp  ascend_buf_surface_impl.h  ascend_common.cpp  ascend_common.h  ascend_device.cpp  ascend_device.h  ascend_model.cpp  ascend_model.h  ascend_predictor.cpp  ascend_predictor.h  ascend_preproc.cpp  ascend_preproc.h
deploy/src/register/devices/bmnn/: bmnn_buf_surface_impl.cpp  bmnn_buf_surface_impl.h  bmnn_common.cpp  bmnn_common.h  bmnn_cv.cpp  bmnn_cv.h  bmnn_device.cpp  bmnn_device.h  bmnn_ffmpeg.cpp  bmnn_model.cpp  bmnn_model.h  bmnn_predictor.cpp  bmnn_predictor.h  (+2 more)
deploy/test/: README.md
deploy/test/cpp/: CMakeLists.txt
deploy/test/cpp/core/: test_alg.cpp  test_core.cpp  test_model_manager.cpp  test_thread_pool.cpp
deploy/test/cpp/demo/: CMakeLists.txt  bmnn_infer.cpp  ffmpe_gpu.cpp  mnn_infer.cpp  onnx_infer.cpp  rknpu2_infer.cpp  sample_ts.cpp  yolov5_common.cpp  yolov5_common.h
deploy/test/cpp/processor/: test_preprocess.cpp  test_preprocess_bmnn.cpp
deploy/toolchains/: toolchains_aarch64.cmake
deploy/tools/: README.md
deploy/tools/map/: README.md  calc_map_yolo.py  calc_map_yolo_keep.py  coco_map.py  coco_pose_map.py
deploy/tools/modcrypt/: CMakeLists.txt  gtx_maker.cpp
deploy/tools/modelconverter/: README.md  jit_export_onnx.py  onnx_static2dynamic.py
deploy/tools/modelconverter/combine/: combine  combine.cpp
deploy/tools/modelconverter/dockerfile/: modelconverter.Dockerfile
deploy/tools/modelconverter/optimizer/: README.md
deploy/tools/scripts/: README.md  build_bmnn.sh  build_docker.sh  build_libmodcry.sh  run_docker.sh
infer/programs/: CMakeLists.txt  test_algo_bm1684.cpp  test_algo_nvidia.cpp  test_algo_rv1126.cpp  test_blit_image.cpp  test_cross_border.cpp  test_forkflit.cpp  test_mlu220_algo.cpp  test_mpp_encode.cpp  test_nv_jpeg_decode.cpp  test_regex.cpp  test_rga_crop.cpp  test_rga_resize.cpp  test_rga_yuv2bgr.cpp  test_rkmedia.cpp  test_target_tracker.h
infer/programs/CV_Samples/: cv_decode_thread_show.cpp  cv_node_show3.cpp
infer/programs/ffmpeg_samples/: mem_test_node_demux.cpp  test_decode_v2.cpp  test_decode_v3.cpp  test_decoder.cpp  test_decoder_thread.cpp  test_demuxer.cpp  test_node_demux.cpp  test_node_deocde.cpp
(+402 files in other folders)
